# info

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  info.cmake
example/: CMakeLists.txt  README.md  main.c
include/: info.h
src/: info.c.in
